addon/styles/components/fd-uml-diagram.less
@import '../cross-browser-mixins';
@import 'common/toggle-button';

.joint-paper.joint-theme-default {
  background-color: transparent;
  &:focus {
    outline-style: none;
  }
}

.ui.form {
  .uml-link-inputs {
    textarea, input {
      position: absolute;
      pointer-events: none;
      -webkit-user-select: none;
      padding: 2px 7px;
      box-sizing: border-box;
      z-index: 2;
    }
  }
}

.ui.form {
  .uml-class-inputs {
    position: absolute;
    pointer-events: none;
    -webkit-user-select: none;
    padding: 2px 7px;
    box-sizing: border-box;
    z-index: 2;
  }
}

.ui.form .uml-class-inputs, .ui.form .uml-link-inputs {
  input,
  textarea {
    /* Enable interacting with inputs only. */
    pointer-events: auto;

    &.click-disabled {
      pointer-events: none;
    }
  }
}

.ui.form .uml-class-inputs input[type="text"],
.ui.form .uml-link-inputs input[type="text"],
.ui.form .uml-class-inputs textarea {
  border: none;
  padding: 0px;
  color: @textColor;
  font-size: 12px;
  font-family: Arial;
  min-width: 50px;
  display: block;
  margin: 0 auto;
  background-color: transparent;
  width: 0;
  &.class-name-input {
    font-weight: bold;
    text-align: center;
    resize: none;
    line-height: 1.1;
    overflow: hidden;
    &.active-object-input {
      text-decoration: underline;
    }
    &.object-in-state-input {
      text-decoration: underline;
    }
    &.instance-input {
      font-weight: normal;
      text-decoration: underline;
    }
    &.package-header-input {
      font-weight: normal;
      text-decoration: underline;
      text-align: left;
    }
    &.nary-assoc-name {
      font-weight: normal;
      text-decoration: underline;
      margin-top: 13px;
    }
    &.start-state-input {
      min-width: 10px;
      text-align: right;
    }
    &.final-state-input {
      min-width: 10px;
      text-align: left;
    }
    &.signal-input {
      min-width: 30px;
    }
    &.complex-transition-input {
      min-width: 1px;
    }
    &.under-class-name-input {
      margin: 0;
    }
  }
  &.params-input {
    resize: none;
    overflow: hidden;
    min-width: 10px;
    line-height: 1.1;
  }
  &.class-stereotype-input {
    resize: none;
    line-height: 1.1;
    overflow: hidden;
    text-align: center;
  }
  &.package-header-input {
    font-weight: normal;
    text-decoration: underline;
    text-align: left;
    resize: none;
    margin: 0;
    line-height: 1.1;
    overflow: hidden;
  }
  &.attributes-input, &.methods-input {
    resize: none;
    line-height: 1.1;
    margin: 4px 0 0 0;
    overflow: hidden;
  }
  &.state-input {
    text-align: center;
    resize: none;
    line-height: 1.1;
    overflow: hidden;
  }
  &.start-multiplicity-input, &.end-multiplicity-input,
  &.start-role-input, &.end-role-input {
    min-width: 10px;
  }
  &.description-input {
    min-width: 5px;
  }
  &.underline-text {
    text-decoration: underline;
  }
}

.ui.form .input-buffer {
  position: absolute;
  top: 0px;
  left: 0px;
  visibility: hidden;
  font-size: 12px;
  font-family: Arial;
  font-weight: bold;
  white-space: pre;
  &.nary-buffer {
    margin-top: 13px;
  }
}

.edit-disabled {
  pointer-events: none;
  .connection-wrap, .marker-arrowhead, .link-tools, .marker-vertices {
    display: none;
  }
}

.linktools-disabled {
  .link-tools, .marker-vertices, .marker-arrowhead {
    display: none;
  }
}

.fd-uml-diagram-toolbar {
  background: @fdSheetBg;
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
  bottom: 0;
  display: inline-table;
  font-size: 0;
  padding: 5px;
  position: absolute;
  margin-right: -50%;
  max-width: 90%;
  left: 50%;
  width: auto;
  z-index: 2;
  .transform(translate(-50%, 0));
  .transition(transform 0.5s);

  .row {
    position: relative;
    z-index: 1;
  }

  &.fd-toolbar-hidden {
    .transform(translate(-50%, 100%));
    bottom: 0 !important;
  }

  .ui.button:not(.toggle-diagram-toolbar) {
    background: @sidebarBg;
    border-radius: 0.9rem;
    border: 4px solid transparent;
    margin: 5px;
    padding: 0.55em;

    &:hover,
    &.active {
      border-color: @blue;
    }
  }
}

.fd-uml-diagram-toolbar,
.ui.button.toggle-diagram-toolbar {
  &::before,
  &::after {
    background: @sidebarBg;
    border-radius: inherit;
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
  }

  &::after {
    background: @overlayColor;
    .opacity(0);
    .transition(opacity 1s);
  }
}

.ui.button.toggle-diagram-toolbar {
  background: @fdSheetBg;
  border-radius: @itemActiveBorderRadius;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  position: absolute;
  top: -@bottonWidthSize;
  left: 0.86rem;
  height: @bottonWidthSize;
  width: @bottonHeightSize;
  i.down {
    .top-arrow();
  }
  i.up {
    .bottom-arrow();
  }
}

.fd-sheet-diagram-header {
  position: relative;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
  .transition(transform 0.5s);

  .form-header {
    .transition(margin 0.5s);
  }

  &.fd-toolbar-hidden {
    .transform(translate(0, calc(~'29px + 24px - 100%')));

    .ui.form & .form-header {
      margin: 0.5em 0;
      max-width: calc(~'100% - 200px');
    }

    .fd-sheet-toolbar {
      line-height: 3.3rem;
      height: 0;

      .ui.button:not(.fd-expand):not(.fd-close):not(.fd-save):not(.fd-edit) {
        opacity: 0;
        font-size: 0;
      }
    }
  }

  .ui.button.toggle-diagram-toolbar {
    bottom: -@bottonWidthSize;
    top: auto;
    left: auto;
    transform: rotate(180deg);
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: none;
    z-index: 1;
    &::before {
      background-color: @fdSheetBg;
    }
  }

  .ui.grid.fd-list {
    margin-bottom: 0;
  }

  .ui.grid.fd-list > .row:last-child {
    border-bottom: none;
  }
}

.content-mini.fade {
  .fd-uml-diagram-toolbar,
  .toggle-diagram-toolbar {
    &::after {
      .opacity(1);
    }
  }
}

.joint-element {
  cursor: default;

  .remove-button,
  .collapse-button,
  .open-edit-form-button,
  .color-button {
    cursor: pointer;
  }

  .right-size-button {
    cursor: ew-resize;
  }

  .down-size-button {
    cursor: ns-resize;
  }

  .right-down-size-button {
    cursor: nwse-resize;
  }
}

.joint-paper-background {
  background-color: transparent;
}

@texttColorHex: multiply(white, @textColor);
@overlayColorHex: multiply(@pageBackground, @overlayColor);
.joint-paper {
  rect {
    &.corner-rect {
      fill: @pageBackground;
      stroke: @pageBackground;
      transition: fill 0.5s ease-in-out, stroke 0.5s ease-in-out;
    }
  }

  .content-mini.fade & {
    rect {
      &.corner-rect {
        fill: @overlayColorHex;
        stroke: @overlayColorHex;
      }
    }
  }
}

.joint-link .marker-vertices,
.joint-link .marker-arrowheads,
.joint-link .link-tools {
  opacity: 1;
}

.joint-link.joint-theme-default {
  .connection-wrap {
    cursor: default;
    &:hover {
      opacity: 0;
      stroke-opacity: 0;
    }
  }
  .tool-remove {
    display: none;
  }
  .marker-vertex,
  .marker-arrowhead {
    fill: @blue;
    &:hover {
      fill: @blue;
    }
  }
}

